--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ lib/percentiles
 assets/database_DE_dist_percentiles.txt
 assets/database_DE_dist.txt
 assets/10000_proteobacteria_window_100_step_10/*.gz
+lib/positional_variability
